US7276 - Update markup for map Fix spacing for map controls and remove validation styles on searchbar. Also add ellipsis rule to the placeholder text.

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -133,6 +133,22 @@ app-search-bar {
       width: 20rem;
     }
   }
+
+  input[placeholder] { text-overflow: ellipsis;}
+
+  // Remove validation
+  input.form-control.ng-touched {
+    &.ng-valid,
+    &.ng-invalid {
+      border-color: $input-border;
+      box-shadow: inset 0 0 0 1px $input-border;
+
+      &:focus {
+      border-color: $input-border-focus;
+      box-shadow: inset 0 0 0 1px rgba($input-border-focus, 0.5);
+      }
+    }
+  }
 }
 
 // Style map
@@ -140,6 +156,12 @@ sebm-google-map {
   background-color: $cr-gray-lighter;
   height: calc(100vh - 69px); // 69px is the height of the header/searchbar
   width: 100vw;
+
+  @media (min-width: $screen-xs) {
+    .gmnoprint {
+      padding: .5rem;
+    }
+  }
 }
 
 // Map footer
